--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -110,7 +110,7 @@ In the meantime, our findings imply that while large canopy trees are the most v
 
 **Forest responses and feedbacks to climate change will have a critical influence on the future of Earth's climate.**
 Globally, temperatures have risen # $^\circ$C since YEAR and are expected to rise an additional #-#$^\circ$C by YEAR (IPCC 2021), accompanied by increasing severity and frequency of heat waves [@perkinsIncreasingFrequencyIntensity2012] and hotter droughts [*Trenberth et al. 2014*].
-These changes are expected to have profound effects on tree metabolism and forest ecosystem function (@breshearsUnderappreciatedPlantVulnerabilities; IPBES report), including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities 2021; @corlettImpactsWarmingTropical2011], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities]. Leading to, individually or in combination, reduced forest C sequestration, as may already be occurring in some forests [REFS; @sullivanLongtermThermalSensitivity2020].The resulting feedbacks to the climate system (e.g., decreased C storage, altered albedo and hydrology) will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016, Bonan 2008], yet this influence remains extremely uncertain [REFS].
+These changes are expected to have profound effects on tree metabolism and forest ecosystem function (@breshearsUnderappreciatedPlantVulnerabilities; IPBES report), including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities 2021; @corlettImpactsWarmingTropical2011], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities]. Leading to, individually or in combination, reduced forest C sequestration, as may already be occurring in some forests [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020].The resulting feedbacks to the climate system (e.g., decreased C storage, altered albedo and hydrology) will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016, Bonan 2008], yet this influence remains extremely uncertain [REFS].
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].**
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. 
@@ -187,7 +187,7 @@ With altitude, the strength of buffering decreases, moving to open-forests [@zel
 
 ### Biophysical drivers
 
-**Biophysical drivers reviewed above influence vertical heat and water stress patterns, and leaf temperature $T_{leaf}$ distribution along the vertical gradient.**
+**Biophysical drivers reviewed above influence leaf temperature $T_{leaf}$ distribution along the vertical gradient.**
 Along the biophysical gradients, leaves adjust to their environment by maintaining, when possible, a $T_{leaf}$ that is optimal for carbon assimilation and metabolic processes  [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020]. 
 Leaves can be cooler than air at high temperature and warmer than air at low temperature (limited homeothermy) or can be drastically warmer than $T_{air}$ (megathermy). In some cases, $T_{leaf}$ can be equalled to $T_{air}$ (poikilothermy) [@cavaleriColdbloodedForestsWarming2020; @drakeNoEvidenceHomeostatic2020]. 
 
@@ -195,18 +195,18 @@ $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated ba
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
-Stomatal conductance ($g_s$) is a key factor mediating $T_{leaf}$ [@songTreeSurfaceTemperature2020].Leaf energy balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994] such that, because $gs$ facilitates heat dissipation, when water demand exceeds water transport, driven by for example: irradiance,$T_{air}$, $VPD$ or drought, conservation of water ($gs$ limitation) occurs at the cost of increasing $T_{leaf}$. 
+This balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994] such that, because $gs$ facilitates heat dissipation, when water demand exceeds water transport, driven by irradiance,$T_{air}$, $VPD$ or drought, conservation of water ($gs$ limitation) occurs at the cost of increasing $T_{leaf}$. 
 
 Therefore, while under maximum $g_s$, leaves can maintain $T_{leaf}$ similar to $T_{air}$ at high solar-radiation loads until light saturation, during $g_s$ limitation solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$ [@cavaleriColdbloodedForestsWarming2020].
 
 High wind speed (Fig. `r fig_NEON_vertical`) decreases $T_{leaf}$ - $T_{air}$ due to large boundary layer conductance ($g_a$)  [@daudetWindSpeedLeaf1999a]. Therefore, under hot conditions, high wind speeds and high $g_s$ would enable cooling [Drake et al. 2018] but at lower wind conditions, thickness of air layer at the leaf surface curbs rapid leaf-to-air heat transfer, through smaller $g_a$, which increases $T_{leaf}$ - $T_{air}$ [@martin_boundary_1999; @leighInfluenceLeafSize2017; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006]
 
 **(paragraph on hydraulics as a driver of leaf T:e.g., water on leaves - evaporative cooling - and leaf water content)**
- Inherent leaf $gs$ is typically greater across species exposed sun-leaves due to stomata density than shade leaves. However, because factors driving $g_s$ limitation--irradiance, VPD and $T_{air}$--increase with exposure, $g_s$ limitation is steeper for sun- than shade-leaves, driving an increase in $T_{leaf}$ (@leighInfluenceLeafSize2017; @fauset_differences_2018). On the other hand, shade leaves can remain cooler under buffered conditions, but lower leaf $gs$ can result in greater $T_{leaf}$ under slight heat stress. 
+ Inherent leaf $gs$ is typically greater across species exposed sun-leaves due to stomata density than shade leaves. However, because factors driving $g_s$ limitation--irradiance, VPD and $T_{air}$--increase with exposure, $g_s$ limitation is steeper for sun- than shade-leaves, driving an increase in $T_{leaf}$ (@leighInfluenceLeafSize2017; @fauset_differences_2018). On the other hand, shade leaves can remain cooler under buffered conditions, but lower leaf $gs$ can result in greater $T_{leaf}$ under slight heat stress [@songTreeSurfaceTemperature2020].
 
-**In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** Small leaves tend to heat and cool faster due to higher $ga$, maintaining lower $T_{leaf}$-$T_{air}$ than large leaves that take longer to heat and cool due to low $ga$, therefore can experience greater $T_{leaf}$ - $T_{air}$ than small leaves [@bauerleSeparatingFoliarPhysiology2011; @leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020].
+**In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** Small leaves heat and cool faster due to higher $ga$ than larger leaves, therefore maintain lower $T_{leaf}$-$T_{air}$ than large leaves that experience greater $T_{leaf}$-$T_{air}$. With adequate water, species with smaller leaves and greater $gs$ will be most effective at cooling during high temperatures, whereas species with larger exposed-leaves can experience greater $T_{leaf}$-$T_{air}$ and heat stress [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @bauerleSeparatingFoliarPhysiology2011; @leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @leuzingerTreeSpeciesDiversity2007]
 
-Lastly, $gs$ and leaf size together, though donot solely explain mean $T_{leaf}$, are most important factors in deciding $T_{leaf}$ - $T_{air}$ and temperature sensitivity, because $gs$ determines leaf biological-biophysical interaction and leaf size determines leaf heating and cooling rate. Therefore, smaller leaves with greater $gs$ are less sensitive to high temperature [@songTreeSurfaceTemperature2020].
+Lastly, canopy structure and architecture influence canopy temperature [@leuzingerTreeSpeciesDiversity2007; @mullerEvidenceEfficientNonevaporative2021]
 
 ### In-situ observations
 **The principles outlined above, vertical microclimate profile (Fig. `r fig_NEON_vertical`) and leaf traits (see following section) together shape in-situ $T_{leaf}$ observations (Fig. `r fig_leaf_T`).** 
@@ -217,10 +217,8 @@ Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little 
 **However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.** 
 Closed-canopy forests, including tropical and temperate broadleaf forests, experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies from $gs$ limitation, than buffered lower-canopies [@doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016]. 
 Greater light input in exposed upper-canopy leaves can sometimes increase $T_{leaf_{max}}$ beyond temperature optimum for photosynthesis ($T_{opt}$) and $T_{air}$, making upper-canopies highly susceptible to heat stress [@doughtyAreTropicalForests2008; @mauTemperateTropicalForest2018a]. 
-Comparing forests, upper canopies of temperate deciduous species can have greater $T_{leaf}$ - $T_{air}$ than the upper canopies of tropical moist and wet forest species [@mauTemperateTropicalForest2018a]. 
+Comparing forests, upper canopies of temperate deciduous species can have greater $T_{leaf}$ - $T_{air}$ than the upper canopies of tropical moist and wet forest species [@mauTemperateTropicalForest2018a]. At a specie-specific level, leaf boundary resistance is lower for confiers than broad-leaf trees, followed by higher mean $T_{leaf}$ in broad-leaf trees than conifer canopies[@leuzingerTreeSpeciesDiversity2007]
 
--"Leaves with adequate water supply are partly buffered against air-temperature
-variations, through a passive biophysical mechanism"[@dongBiophysicalHomoeostasisLeaf2017].
 
 ## Leaf traits 
 
@@ -265,7 +263,7 @@ The distribution of biochemical traits enable photosynthesis and metabolic proce
 
 ### Interspecific variation 
 
-Across forest species, widely, show fundamental trait adaptation to light gradients similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, between multi-species canopy and understory, trait plasticity to similar biophysical gradients can vary several-folds due to inherent specie-specific traits. Spatio-temporal gradients offer another axis for trait variation, as they are heterogenous in time and space [Ishii and Asano, 2007]. Across ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000]. Therefore $T_{leaf}$ varies across speci-specific traits, where species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
+Across forest species, widely, show fundamental trait adaptation to light gradients similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. However, between multi-species canopy and understory, trait plasticity to similar biophysical gradients can vary several-folds based on inherent specie-specific traits. Spatio-temporal gradients offer another axis for trait variation, as they are heterogenous in time and space [Ishii and Asano, 2007]. Across ontogeny of the same species in canopy and understory, traits such as LMA, photosynthetic capacity [per area] and $gs$ increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000]. Therefore $T_{leaf}$ varies across speci-specific traits, where species with smaller leaves and larger $gs$ will be less vulnerable to temperature increase [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
