--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -165,7 +165,7 @@ Across all **#** forested NEON sites, and in closed-canopy forests [@barnardSeas
 
 ### Air temperature 
 **Air temperature, $T_{air}$, often shows little variation across the vertical gradient, but under certain circumstances it can be significantly buffered by forest canopies (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`).**
-The $T_{air}$ difference between understory and canopy temperature vary based on multiple factors such as radiation, local topography, vertical air mixing and cloud cover [*Defrenne et al. 2021*].Dense canopies buffer understories from maximum $T_{air}$ relatively more than open canopies, where dense canopy understories can have cooler maximum temperature during the day, and warmer minimum temperature during the night, than open canopy understories, nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009;  @martin_boundary_1999] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. (*This sentence is too complex-- hard to understand*)
+The $T_{air}$ difference between understory and canopy vary based on multiple factors such as radiation, local topography, vertical air mixing and cloud cover [*Defrenne et al. 2021*].Dense canopies buffer understories from maximum $T_{air}$ relatively more than open canopies, where dense canopy understories can have cooler maximum temperature during the day, and warmer minimum temperature during the night, than open canopy understories, nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009;  @martin_boundary_1999] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. (*This sentence is too complex-- hard to understand*)
 
 Seasonally, canopy buffering capacity is greater in wet than dry seasons [@davisMicroclimaticBufferingForests2019; @rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018, Tymen et al. 2017; @mcgregor_tree_nodate]. Whereas in colder conditions, dense-canopy understories experience higher minimum temperatures [$T_{min}$] relative to open-canopy understories and nearby clearings where greater radiative heat loss results in lower $T_{min}$ [@zellweger_seasonal_2019; *Defrenne et al. 2021*; @nakamuraForestsTheirCanopies2017].
 
@@ -195,7 +195,7 @@ $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated ba
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
-This balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994] such that, because $gs$ facilitates heat dissipation, when water demand exceeds water transport, driven by irradiance,$T_{air}$, $VPD$ or drought, conservation of water ($gs$ limitation) occurs at the cost of increasing $T_{leaf}$. 
+This balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994] such that, because $gs$ facilitates heat dissipation, when leaf water demand exceeds water transport, driven by irradiance, $T_{air}$, $VPD$ or drought, conservation of water ($gs$ limitation) occurs at the cost of increasing $T_{leaf}$ [@fauset_differences_2018].
 
 Therefore, while under maximum $g_s$, leaves can maintain $T_{leaf}$ similar to $T_{air}$ at high solar-radiation loads until light saturation, during $g_s$ limitation solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$ [@cavaleriColdbloodedForestsWarming2020].
 
@@ -206,7 +206,7 @@ High wind speed (Fig. `r fig_NEON_vertical`) decreases $T_{leaf}$ - $T_{air}$ du
 
 **In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** Small leaves heat and cool faster due to higher $ga$ than larger leaves, therefore maintain lower $T_{leaf}$-$T_{air}$ than large leaves that experience greater $T_{leaf}$-$T_{air}$. With adequate water, species with smaller leaves and greater $gs$ will be most effective at cooling during high temperatures, whereas species with larger exposed-leaves can experience greater $T_{leaf}$-$T_{air}$ and heat stress [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @bauerleSeparatingFoliarPhysiology2011; @leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @leuzingerTreeSpeciesDiversity2007]
 
-Lastly, canopy structure and architecture influence canopy temperature [@leuzingerTreeSpeciesDiversity2007; @mullerEvidenceEfficientNonevaporative2021]
+Lastly, canopy structure and architecture also influence canopy temperature [@leuzingerTreeSpeciesDiversity2007; @mullerEvidenceEfficientNonevaporative2021]
 
 ### In-situ observations
 **The principles outlined above, vertical microclimate profile (Fig. `r fig_NEON_vertical`) and leaf traits (see following section) together shape in-situ $T_{leaf}$ observations (Fig. `r fig_leaf_T`).** 
@@ -329,8 +329,8 @@ Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez
 
 **Similar to photosynthesis, respiration tends to be higher in canopy sun-leaves (Chen et al. 2020), but temperature sensitivity of respiration--$Q_{10}$--shows no definite trend along the gradient [@bolstad_foliar_1999; Weerasinghe et al.2014].**
 
-While in a few studies $Q_{10}$ shows to be greater in upper-canopy leaves than in shaded lower-canopy leaves across species, with differing values between species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996]. Contranstingly, in a lowland tropical Australian forest study, $Q_{10}$ did not vary across species vertical profiles [@weerasingheCanopyPositionAffects2014], similary across temperate trees at Coweeta, though with a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased (*see their Fig. 1*)[@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). @bolstad_foliar_1999 also found evidence of acclimation, but there remained a declining trend of respiration with elevation.
-- Response of respiration to leaf temperature [partially represented  by $E_{0}$] in Quercus rubra hardly varies with canopy position, but canopy-position effect is respiration is much greater in mesic sites, and seasonal effect is greater in drier sites [@xuSeasonalVariationTemperature2006]
+While a few studies show $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves across species, with differing values between species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996]. Contranstingly, in a lowland tropical Australian forest study, $Q_{10}$ did not vary across species vertical profiles [@weerasingheCanopyPositionAffects2014], similary across temperate trees at Coweeta, though with a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased (*see their Fig. 1*)[@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). @bolstad_foliar_1999 also found evidence of acclimation, but there remained a declining trend of respiration with elevation.
+- Response of respiration to $T_{leaf}$ [partially represented  by $E_{0}$] in Quercus rubra hardly varies with canopy position, but canopy-position effect in respiration is much greater in mesic sites, and seasonal effect is greater in drier sites [@xuSeasonalVariationTemperature2006]
  
 ### VOC production
 
@@ -349,18 +349,16 @@ Vertical gradients in the biophysical environment shape which plant strategies, 
 **Vertical gradients affect tree recruitment, growth and survival, and how these respond to climatic variation.**
 More interesting in this context is how these shape differences in the climatic sensitivity of growth and mortality. There are numerous demographic differences between understory and canopy trees, which have been linked to both the physical environment and plant traits (e.g., REFS), *and we will not review those here.* *(although maybe we should put one paragraph?)*
 
-Biophysically, greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [Oishi et al. 2016; @corlettImpactsWarmingTropical2011] .This can implication to canopies and gaps that reside at levels of greater $VPD$. Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$, particularly in tropical canopies where irradiance can have a greater effect [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. However, soil water loss during drought effects larger trees more than small trees because, limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [Norway spruce study, bennett; @mcgregor_tree_nodate].
+Biophysically, greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011] .Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$, particularly in tropical canopies where irradiance can have a greater effect [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. However, soil water loss during drought effects larger trees more than small trees because, limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [Norway spruce study, bennett; @mcgregor_tree_nodate].
 
-Additionally, understory growth can be more sensitive to annual warming than canopy, showing earlier spring onset and later autumn senescense, particularly in temperate-deciduous forests [Zohnner and Renner, 2019]. However, late spring, short-term heat waves in temperate forests can negatively impact partially-expanded canopy leaves more than understory saplings that are buffered, by inducing leaf shedding and decreasing photosynthesis [and C uptake?] in reflushed leaves [Filewood and Thomas, 2013].
+Additionally, understory growth can be more sensitive to annual warming than canopy, showing earlier spring onset and later autumn senescense, particularly in temperate-deciduous forests [Zohnner and Renner, 2019]. Increase in summer temperature is also associated with reduced forest carbon storage [@oishiWarmerTemperaturesReduce2018]. However, late spring, short-term heat waves in temperate forests can negatively impact partially-expanded canopy leaves more than understory saplings that are buffered, by inducing leaf shedding and decreasing photosynthesis and C uptake in reflushed leaves [@filewodImpactsSpringHeat2014].
 
 **There is also recently emerging evidence that understory trees tend to exhibit greater growth declines with $T_{air}$ under mesic conditions.** 
 In eight forests across the northeast United States, growth rates of understory trees declined sharply at higher $T_{air}$ [Fig `r fig_treerings` **???**; @rollinsonClimateSensitivityUnderstory].
 This pattern is initially counter-intuitive in that sun-exposed leaves can experience greater elevation of $T_{leaf}$ over $T_{air}$ than shade leaves (Fig. `r fig_leaf_T` **???**). 
 However, given adequate moisture to sustain high $g_s$, canopy leaves exposed to more wind and lower humidity should be more effective at cooling when $T_{air}$ exceeds physiological optima (Fig. `r fig_leaf_T`).
-It is also possible that higher temperatures reduce understorty tree growth in these forests through an indirect mechanism, such as accelerated competition under warmer temperatures. 
--Whereas, in other cases warming is associated with taller understory trees with lower LMA that complete their lifecycle in the understory, under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]
--Decelarating tree growth rates predominantly in smaller trees, but not restricted to, have also been observed in tropical forests, associated with local climate patterns of mean daily minimum temperature, increasing temperature and rainfall regime [Feeley et al. 2007] 
--Interacting biophysical and biological stressors also show that stress sensitivity and ability to tolerate number of stressors increases with height, light and water. Partly because NSC reserves are greater in taller trees due to available light than in buffered trees that are light and NSC limited, therefore making buffered small trees more sensitive to stress [@niinemetsResponsesForestTrees2010a].
+It is also possible that higher temperatures reduce understorty tree growth in these forests through an indirect mechanism, such as accelerated competition under warmer temperatures. Similarly, in tropical forests, decelarating tree growth rates predominantly in smaller trees, but not restricted to, have also been observed due to local climate patterns of mean daily minimum temperature, increasing temperature and rainfall regime, but exact reasons remain unresolved  [Feeley et al. 2007]. Further, interacting biophysical and biological stressors also show that stress sensitivity and ability to tolerate number of stressors increases with height, light and water. Partly because NSC reserves are greater in taller trees due to available light than in buffered trees that are light and NSC limited, therefore making buffered small trees more sensitive to stress [@niinemetsResponsesForestTrees2010a].
+In other, cases warming is associated with taller understory trees with lower LMA that complete their lifecycle in the understory, under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]
 
 *In this section we could perhaps also consider differences in biomass distribution between canopy trees an understory plants, and what that may mean for performance at high temperature. What I'm thinking is the temperature sensitivity of respiration that applies to leaves, stems, and roots, and even though thermal acclimation of leaf respiration is common, much less is known about acclimation of stem and root respiration, and incomplete acclimation still increases the respiration load at higher temperature. It is possible that an increased respiration load is more disadvantageous for understory plants because 1), I suspect that a greater fraction of their total biomass is life biomass that respires (as opposed dead heartwood in the stems of big trees), and 2), because they operate closer to their light compensation point, so if they lose more carbon in respiration, they would need  to make up for lost carbon in photosynthesis, but might lack sunlight to do so*
 
@@ -394,12 +392,10 @@ The complex interactions of the biophysical environment and biological--leaf tra
 
 
 Canopy buffering is crucial to microclimate functioning, which is influenced by hydrological-cycle at large [Davis et al. 2019]. Frequent droughts can thus cause canopy disturbances.While less severe drought can decrease tree canopy circumference [@aussenacInteractionsForestStands2000a], more severe droughts show increasing larger tree mortality in forests globally [@senfCanopyMortalityHas2018a; @mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Hydraulic limitation in forests can also alters species thermoregulation [@sastry_leaf_2018]. Particularly, increasing temperatures shows increase in canopy $T_{leaf}$ above ambient temperature, and sometimes beyond or close to their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019].  Temperature driven photosynthesis limitation is also reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Recent adavances in canopy studies further show large loss of canopies in Europe caused by wind-induced disturbance and anthropogenic deforestation [Cornelius Senf, 2021; @senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020]. Loss of big trees (e.g.@senfCanopyMortalityHas2018a ) would increase canopy roughness, and reductions in canopy cover is associated with reduced canopy structural complexity and composition which changes understory species composition and soil fertility [*@majasalmiImpactTreeCanopy2020*].Leading to altered biophysical gradient with local heating effects [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
-
+Tropical forests are narrower thermal limits [@corlettImpactsWarmingTropical2011].
 ### warming
 
-While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Warming will disproportionately affect the less warm-adapted functional types within the forest canopy, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), as is observed with understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013] with increasing threat to fauna in microrefugias [@scheffersMicrohabitatsReduceAnimal2013] . Tree-ring analysis in mesic temperate forests shows reduced growth of understory trees relative to overstory with warming temperatures [@rollinsonClimateSensitivityUnderstory, 2020]. Heatwave and temperature  can alter canopy and understory phenology, forest photosynthesis and forest C uptake [REFS, @zohnerOngoingSeasonallyUneven2019]. At a leaf metabolism level, fluxnet global data analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021].
-
--Tropical forests are narrower thermal limits [@corlettImpactsWarmingTropical2011]
+While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Warming will disproportionately affect the less warm-adapted functional types within the forest canopy, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), as is observed with understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013] with increasing threat to fauna in microrefugias [@scheffersMicrohabitatsReduceAnimal2013]. Heatwave and temperature  can alter understory tree grwoth rates, canopy and understory phenology, forest photosynthesis and forest C uptake [REFS, @zohnerOngoingSeasonallyUneven2019]. At a leaf metabolism level, fluxnet global data analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021].
 
 Differential mortality within the canopy structure will alter the profile of metabolism and hence emergent forest function. Such alteration to canopy structure may be detectable by lidar and thermal remote sensing. If we know how metabolism maps to the thermal profile, then the observed forest structural changes can inform prediction of forest function.
  
