--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -351,7 +351,7 @@ More interesting in this context is how these shape differences in the climatic 
 
 Biophysically, greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011] .Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$, particularly in tropical canopies where irradiance can have a greater effect [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. However, soil water loss during drought effects larger trees more than small trees because, limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [Norway spruce study, bennett; @mcgregor_tree_nodate].
 
-Additionally, understory growth can be more sensitive to annual warming than canopy, showing earlier spring onset and later autumn senescense, particularly in temperate-deciduous forests [Zohnner and Renner, 2019]. Increase in summer temperature is also associated with reduced forest carbon storage [@oishiWarmerTemperaturesReduce2018]. However, late spring, short-term heat waves in temperate forests can negatively impact partially-expanded canopy leaves more than understory saplings that are buffered, by inducing leaf shedding and decreasing photosynthesis and C uptake in reflushed leaves [@filewodImpactsSpringHeat2014].
+Additionally, understory growth can be more sensitive to annual warming than canopy, showing earlier spring onset and later autumn senescense, particularly in temperate-deciduous forests [Zohnner and Renner, 2019]. Increase in summer temperature in mesic temperate forests is also associated with reduced forest carbon storage [@oishiWarmerTemperaturesReduce2018]. However, late spring, short-term heat waves in temperate forests can negatively impact partially-expanded canopy leaves more than understory saplings that are buffered, by inducing leaf shedding and decreasing photosynthesis and C uptake in reflushed leaves [@filewodImpactsSpringHeat2014].
 
 **There is also recently emerging evidence that understory trees tend to exhibit greater growth declines with $T_{air}$ under mesic conditions.** 
 In eight forests across the northeast United States, growth rates of understory trees declined sharply at higher $T_{air}$ [Fig `r fig_treerings` **???**; @rollinsonClimateSensitivityUnderstory].
